# Monday

./: .gitignore  README.md  index.css  index.html  index.js  koala-config.json  release.sh
.sass-cache/600f6fd7996ae5ed1a91d4209a57dda061a3062d/: _footer.scssc  _home_header.scssc  _home_screen.scssc  _navbar.scssc  _pitch.scssc  index.scssc
data/language/: english.json  svenska.json
html/: home.html  purchase.html
release/data/data/language/: english.json  svenska.json
resources/icons/: Cred_list.txt
rusty/: Cargo.toml
rusty/src/: main.rs
scripts/: language_service.js  main.js  router.js  urlparse.js
styles/: _footer.scss  _home_header.scss  _home_screen.scss  _modal.scss  _navbar.scss  _pitch.scss  index.scss
